Add some details to neuro page

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -20,7 +20,7 @@ search:
 description:
   Where I take notes
 page_title:
-  "🧠 Kasra's Digital Garden"
+  "🪴 Kasra's Digital Garden"
 links:
   - link_name: Twitter
     link: https://twitter.com/kasratweets
